# SmartMedicineCabinet

./: .gitignore  BUILD_GUIDE.html  CMakeLists.txt  README.md  main.cpp  main.qml  resources.qrc  test_token.py  verify_token.py
MCU_Master/: .gitignore  SmartMedicineCabinet_Master.ioc
MCU_Master/Core/Inc/: main.h  stm32f1xx_it.h
MCU_Master/Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
MCU_Master/MDK-ARM/: README.md  SmartMedicineCabinet_Master.uvprojx
MCU_Master/app/: app_scheduler.c  app_scheduler.h
MCU_Master/driver/: bsp_light_sensor.c  bsp_light_sensor.h  bsp_relay.c  bsp_relay.h  bsp_system.c  bsp_system.h  bsp_uart_k230.c  bsp_uart_k230.h  bsp_uart_scanner.c  bsp_uart_scanner.h  bsp_uart_slave.c  bsp_uart_slave.h  bsp_uart_wifi.c  bsp_uart_wifi.h  bsp_ultrasonic.c  bsp_ultrasonic.h  ws2812.c  ws2812.h
MCU_Master/module/: cloud_esp8266.c  cloud_esp8266.h  cloud_proto.c  cloud_proto.h  dev_scanner.c  dev_scanner.h  medicine_db.c
MCU_Slave/: .gitignore  SmartMedicineCabinet_Slave.ioc
MCU_Slave/Core/Inc/: main.h
MCU_Slave/Core/Src/: gpio.c  i2c.c  main.c  usart.c
MCU_Slave/MDK-ARM/: SmartMedicineCabinet_Slave.uvprojx
MCU_Slave/app/: slave_scheduler.c  slave_scheduler.h
MCU_Slave/driver/: bsp_i2c_max30102.c  bsp_i2c_max30102.h  bsp_system.c  bsp_system.h  bsp_uart_asr.c  bsp_uart_asr.h  bsp_uart_host.c  bsp_uart_host.h  bsp_uart_tts.c  bsp_uart_tts.h
MCU_Slave/module/: dev_asr.c  dev_asr.h  dev_health.c  dev_health.h  dev_tts.c  dev_tts.h  max30102_alg.c  max30102_alg.h  medicine_db.c  medicine_db.h
android/: AndroidManifest.xml
qml/components/: CartItem.qml  DrugCard.qml  OrderItem.qml
qml/pages/: CartPage.qml  DashboardPage.qml  DrugDetailPage.qml  DrugShelfPage.qml  HealthMonitorPage.qml  HealthNewsPage.qml  HomePage.qml  LoginPage.qml  NewsDetailPage.qml  OrderPage.qml  PersonalInfoPage.qml  ProfilePage.qml
src/: appstate.cpp  appstate.h  databasemanager.cpp  databasemanager.h  mqttclient.cpp  mqttclient.h  theme.cpp  theme.h
